--- a/The_economist.html
+++ b/The_economist.html
@@ -58,6 +58,20 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=TwGxqlpumac" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    비상시국에 도대체 외국인은 왜 돌아왔을까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=hElw7n1ow5c" target="_blank" title="증시각도기TV">
+    [8월24일한국마감] 돌아온 외국인 매수</a><br>
+
+  <a href="https://www.youtube.com/watch?v=D3GrWJhfs-s" target="_blank" title="증시각도기TV">
+    [도기책방] 대폭락1929</a><br>
+
+  <a href="https://www.youtube.com/watch?v=M6BXjapczR8" target="_blank" title="JD부자연구소">
+    애플의 주가가 왜 오를까</a><br>
+
+  <a href="https://www.youtube.com/watch?v=an_shx0wQmk" target="_blank" title="자유잍튜브THE">
+    미국의 화웨이 제재와 한국의 반도체 시장</a><br>
 
   <a href="https://www.youtube.com/watch?v=3FbcwxfiOkE" target="_blank" title="JD부자연구소">
     주식시장 이제 상승시작이다</a><br>
