--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -59,10 +59,20 @@
 
 
 
+  <a>신삼국지TV시리즈 E72</a><br>
+  <a>신삼국지TV시리즈 E71</a><br>
+  <a>신삼국지TV시리즈 E70</a><br>
 
+  <a href="https://www.youtube.com/watch?v=T1_619MOJYM" title="써에이스쇼">
+    삼국지보다 재미있는 정사 초한지 Part 10 (거록대전)</a><br>
 
+  <a href="https://www.youtube.com/watch?v=SA509mT6GyM" title="써에이스쇼">
+    삼국지보다 재미있는 정사 초한지 Part 9 (거록으로)</a><br>
 
-
+  <a>신삼국지TV시리즈 E69</a><br>
+  <a>신삼국지TV시리즈 E68</a><br>
+  <a>신삼국지TV시리즈 E67</a><br>
+  <a>신삼국지TV시리즈 E66</a><br>
 
   <a href="https://www.youtube.com/watch?v=lB7Vf6v5LRI" title="삼프로TV_경제의신과함께">
     산호초의 천국 마이크로네시아, 태평양의 섬 이야기 1부 [지구본연구소 시즌2 - EP.48]</a><br>
