--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,11 +50,12 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.73]</h1>
+    <h1>Karazhan Library[Lv.74]</h1>
 
     <p style="margin-top:45px;"><pre>
 
-    <h2><strong>경제[Lv.31]</h2></strong>
+    <h2><strong>경제[Lv.32]</h2></strong>
+      <b>5X[제 3의 부의 원칙]-대니얼 크로스비</b><br>
       [부의 대이동]-오건영<br>
       [Trade the Trader]-Quint Tatro<br>
       [위험한 일본 경제의 미래]-데이비드 앳킨슨<br>
@@ -102,7 +103,7 @@
       [그래서 철학이 필요해]-고바야시 쇼테이<br>
       [내 안의 나를 깨우는 장자 외편]-장자<br>
     <h2><strong>심리학[Lv.5]</h2></strong>
-      <b>4x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</b><br>
+      <b>5x[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</b></a><br>
       [자제력 수업]-피터 홀린스<br>
       [삶이 괴롭냐고 심리학이 물었다]-게일 브레너<br>
       [죽기 전에 한 번은 심리학을 만나라]-서상원<br>
@@ -155,6 +156,7 @@
         <br>
         <li>경제:[Trade the Trader]-Quint Tatro</li>
         <li>경제:[부의 대이동]-오건영</li>
+        <li>경제:[제 3의 부의 원칙]-대니얼 크로스비</li>
     </p></pre>
 
     <p><pre>
