--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -55,7 +55,7 @@
     <p style="margin-top:45px;"><pre>
 
     <h2><strong>경제[Lv.32]</h2></strong>
-      <b>5X[제 3의 부의 원칙]-대니얼 크로스비</b><br>
+      <b>6X[제 3의 부의 원칙]-대니얼 크로스비</b><br>
       [부의 대이동]-오건영<br>
       [Trade the Trader]-Quint Tatro<br>
       [위험한 일본 경제의 미래]-데이비드 앳킨슨<br>
@@ -148,12 +148,8 @@
 
     <p><pre>
       <h2>2020년 8월 독서</h2>
-        <li>경제/경영:[위험한 일본 경제의 미래]-데이비드 앳킨슨</li>
-        <li>역사:</li>
-        <li>철학:</li>
+        <li>경제:[위험한 일본 경제의 미래]-데이비드 앳킨슨</li>
         <li>심리학/처세술:[성숙한 어른이 갖춰야 할 좋은 심리 습관]-류쉬안</li>
-        <li>과학:</li>
-        <br>
         <li>경제:[Trade the Trader]-Quint Tatro</li>
         <li>경제:[부의 대이동]-오건영</li>
         <li>경제:[제 3의 부의 원칙]-대니얼 크로스비</li>
@@ -161,23 +157,18 @@
 
     <p><pre>
       <h2>2020년 7월 독서</h2>
-        <li>경제/경영:[주식투자의 법칙]-제시 리버모어</li>
+        <li>경제:[주식투자의 법칙]-제시 리버모어</li>
         <li>역사:2x[하룻밤에 읽는 영국사]-안병억</li>
         <li>철학:[도덕경]-노자</li>
-        <li>심리학/처세술:[포사이트:미래를 꿰뚫어보는 힘]-비나 벤카타라만</li>
-        <li>과학:</li>
-        <br>
+        <li>심리학:[포사이트:미래를 꿰뚫어보는 힘]-비나 벤카타라만</li>
         <li>심리학:[자제력 수업]-피터 홀린스</li>
     </p></pre>
 
     <p><pre>
       <h2>2020년 6월 독서</h2>
-        <li>경제/경영:[세상 친절한 경제상식]-토리텔러</li>
+        <li>경제:[세상 친절한 경제상식]-토리텔러</li>
         <li>역사:[하룻밤에 읽는 한국사]-최용범</li>
-        <li>철학:</li>
-        <li>심리학/처세술:[제갈량문집]-제갈량</li>
-        <li>과학:</li>
-        <br>
+        <li>처세술:[제갈량문집]-제갈량</li>
         <li>경제:[머니]-롭 무어</li>
         <li>경제:[돈의 속성]-김승호</li>
         <li>경제:[해외 ETF 백과사전]-김태현</li>
@@ -188,23 +179,14 @@
 
     <p><pre>
       <h2>2020년 5월 독서</h2>
-        <li>경제/경영:[코로나 이후의 세계]-제이슨 솅커</li>
-        <li>역사:</li>
-        <li>철학:</li>
-        <li>심리학/처세술:</li>
-        <li>과학:</li>
-        <br>
+        <li>경제:[코로나 이후의 세계]-제이슨 솅커</li>
         <li>경제:[디플레 전쟁]-홍춘욱</li>
     </p></pre>
 
     <p><pre>
       <h2>2020년 4월 독서</h2>
-        <li>경제/경영: [시장의 기억]-이태호</li>
-        <li>역사:</li>
-        <li>철학:</li>
+        <li>경제: [시장의 기억]-이태호</li>
         <li>심리학/처세술: [승자의 결단과 전략, 오륜서]-마야모토 무사시</li>
-        <li>과학:</li>
-        <br>
         <li>소설: [별을 위한 시간]-로버트 A. 하인라인</li>
         <li>자기 계발: [최강 멘탈]-쓰지 유시후미</li>
         <li>자기 계발: [지친 당신에게 고요를 선물합니다]-팀 콜린스</li>
@@ -212,12 +194,9 @@
 
     <p><pre>
       <h2>2020년 3월 독서</h2>
-        <li>경제/경영: [내일의 부: 오메가편]-조던 김상섭</li>
+        <li>경제: [내일의 부: 오메가편]-조던 김상섭</li>
         <li>역사: [세상에서 가장 쉬운 세계사]-천레이</li>
         <li>철학: [인간과 좀비의 목숨을 건 철학수업]-사쿠라 츠요시</li>
-        <li>심리학/처세술:</li>
-        <li>과학:</li>
-        <br>
         <li>사회학: [재미란 무엇인가?]-벤 핀첨</li>
         <li>경영: [반대의 놀라운 힘]-샬런 네메스</li>
         <li>소설: [위대한 개츠비]-스콧 피츠제럴드</li>
@@ -225,12 +204,10 @@
 
     <p><pre>
       <h2>2020년 2월 독서</h2>
-        <li>경제/경영: [알아두면 쓸모 있는 IT 상식]-정철환</li>
+        <li>경제: [알아두면 쓸모 있는 IT 상식]-정철환</li>
         <li>역사: [하멜표류기]-헨드릭 하멜</li>
         <li>철학: [차라투스트라는 이렇게 말했다]-프리드리히 니체</li>
         <li>심리학/처세술: [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤</li>
-        <li>과학:</li>
-        <br>
         <li>에세이: [이창호의 부득탐승]-이창호</li>
         <li>경영: [채리티:워터]-스캇 해리슨</li>
         <li>소설: [데미안]-헤르만 헤세</li>
@@ -248,7 +225,6 @@
         <li>철학: [그래서 철학이 필요해]-고바야시 쇼테이</li>
         <li>심리학/처세술:[삶이 괴롭냐고 심리학이 물었다]-게일 브레너</li>
         <li>과학: [기억은 미래로 향한다]</li>
-        <br>
         <li>경제: [부의 본능]-브라운스톤</li>
         <li>경제: [빅스텝]-박혜정</li>
         <li>경제: [직장인의 은퇴없는 실전 주식투자]-차영주</li>
@@ -266,7 +242,6 @@
         <li>철학: [내 안의 나를 깨우는 장자 외편]-장자</li>
         <li>심리학/처세술: [나도 아직 나를 모른다]-허지원</li>
         <li>과학:[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트</li>
-        <br>
         <li>경제: [원더키디의 세대, IT는 우리의 일상을 어떻게 바꾸는가?]-이영복</li>
         <li>경영: [적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단</li>
         <li>소설: [82년생 김지영]-조남주</li>
