--- a/The_economist.html
+++ b/The_economist.html
@@ -51,12 +51,42 @@
   <img src="blizzardstorm.gif" width="100%">
 
 
-  <h1>The Economist[Lv.26]</h1><br><br><br>
+  <h1>The Economist[Lv.27]</h1><br><br><br>
 
 
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=tGUe0EXkQqw" taregt="_blank" target="미국주식에 미치다 TV">
+    나중에 후회하더라도 일단은 붙잡고 계셔요!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=LnzLd7kcjRU" taregt="_blank" target="미국주식에 미치다 TV">
+    [미국증시] 어썸 파이브 '결제회사 Top3'</a><br>
+
+  <a href="https://www.youtube.com/watch?v=CSaTMSza5fE" target="_blank" title="삼프로TV_경제의신과함께">
+    [대박꿀팁] 파월 연설보다 실적발표 후 바로 이 사이트를 확인해라</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_SyHyKkF1tQ" target="_blank" title="내일은 투자왕 - 김단테">
+    속보 - 초저금리 장기화? 평균물가목표제를 제시한 Fed ( 20년 8월 28일 잭슨홀 리뷰)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=vFI3nCbNke0" target="_blank" title="증시각도기TV">
+    [8월27일미국마감] 빅테크 데이!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=duylljvd7zE" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    20만 감사 [앞으로 3개월 시리즈] 1. 통찰력</a><br>
+
+  <a href="https://www.youtube.com/watch?v=1rzcgrM1bJc" target="_blank" title="증시각도기TV">
+    [8월 27일 한국마감] 확진자 증가에 휘청한 한국증시</a><br>
+
+  <a href="https://www.youtube.com/watch?v=uPplRMYgBcE" target="_blank" title="자유잍튜브THE">
+    다우 지수 퇴출 3종목과 신규 3종목. 어떤 의미인가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=2xOhuvfuCag" target="_blank" title="JD부자연구소">
+    내일 새벽 파월의 발언이 중요하다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ov5DQd-KNUE" target="_blank" title="JD부자연구소">
+    코로나의 세상 생각보다 길 수 있다</a><br>
 
   <a href="https://www.youtube.com/watch?v=TwGxqlpumac" target="_blank" title="돈파는가게_세상의 모든 재테크">
     비상시국에 도대체 외국인은 왜 돌아왔을까?</a><br>
