--- a/懲毖錄.html
+++ b/懲毖錄.html
@@ -50,7 +50,7 @@
   <div id="contents">
     <img src="remember.jpg" width="100%">
 
-    <h1 style="text-align:center">懲毖錄[Lv.15]</h1><br>
+    <h1 style="text-align:center">懲毖錄[Lv.16]</h1><br>
     <h3 style="text-align:center">豫其懲而毖役患(미리 징계하여 후환을 경계한다)<br>
       -『시경(詩經)』 소비편(小毖篇)</h3><br><br>
   <br>
@@ -58,6 +58,10 @@
 
 
 
+
+
+  <a href="https://www.youtube.com/watch?v=FqB7Dz1GyPw" title="TvN인사이트">
+    우리가 잘못 알고 있는 고려의 풍습 고려장</a><br>
 
   <a>신삼국지TV시리즈 E72</a><br>
   <a>신삼국지TV시리즈 E71</a><br>
