--- a/The_economist.html
+++ b/The_economist.html
@@ -57,6 +57,23 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=mj-2OQ1Wv3A" target="_blank" title="이상투자그룹">
+    [셀트리온 주가] 긴급 속보 현재 여의도 초비상 난 백신 치료제 희귀의약품 지정 13조 시장 점유율 1위 확정 이상우 주식전문가 바이오테마 l 이상우 전문가 l 이상우 대표 l</a><br>
+
+  <a href="https://www.youtube.com/watch?v=_n171ipLHPg" target="_blank" title="자유잍튜브THE">
+    네카 미친 주가? 플랫폼 기업, 시장은 왜 프리미엄을 주는가</a><br>
+
+  <a href="https://www.youtube.com/watch?v=sOYsUoIRJdQ" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    9월 주식시장? 돈걱정 하지말고 열심히 공부하자_조성연소장(펀펀한 투자연구소)</a><br>
+
+  <a href="https://www.youtube.com/watch?v=txbu7Bf0U0E" target="_blank" title="증시각도기TV">
+    [8월31일 한국마감] MSCI리밸런싱에 뺨맞은 한국증시</a><br>
+
+  <a href="https://www.youtube.com/watch?v=SrDMGtnwVSg" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    [앞으로 3개월] 2. 탐욕의 시간에서 이성의 시간으로</a><br>
+
+  <a href="https://www.youtube.com/watch?v=w4HQ6sZSaLI" target="_blank" title="JD부자연구소">
+    달러 빼고 주식, 금, 부동산 등 다 오른다</a><br>
 
   <a href="https://www.youtube.com/watch?v=tGUe0EXkQqw" taregt="_blank" target="미국주식에 미치다 TV">
     나중에 후회하더라도 일단은 붙잡고 계셔요!</a><br>
