--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -57,7 +57,8 @@
 
 
 
-
+  <a href="https://www.youtube.com/watch?v=2cKnLFm9ggY" target="_blank" title="그롬마쉬TV">
+    [사전 공개] 남만 DLC 가이드 1화 - 남만의 야수와 등갑병을 소개합니다. I 토탈워 삼국 : 흉폭한 야생</a><br>
 
   <a href="https://www.youtube.com/watch?v=a05AYQLlECs" target="_blank" title="NBC News">
     Live: Trump Holds News Conference | NBC News</a><br>
