--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,12 +50,13 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.74]</h1>
+    <h1>Karazhan Library[Lv.75]</h1>
 
     <p style="margin-top:45px;"><pre>
 
-    <h2><strong>경제[Lv.32]</h2></strong>
-      <b>6X[제 3의 부의 원칙]-대니얼 크로스비</b><br>
+    <h2><strong>경제[Lv.33]</h2></strong>
+      [투자의 태도]-곽상준</b><br>
+      <b>7X[제 3의 부의 원칙]-대니얼 크로스비</b><br>
       [부의 대이동]-오건영<br>
       [Trade the Trader]-Quint Tatro<br>
       [위험한 일본 경제의 미래]-데이비드 앳킨슨<br>
@@ -153,6 +154,7 @@
         <li>경제:[Trade the Trader]-Quint Tatro</li>
         <li>경제:[부의 대이동]-오건영</li>
         <li>경제:[제 3의 부의 원칙]-대니얼 크로스비</li>
+        <li>경제:[투자의 태도]-곽상준</li>
     </p></pre>
 
     <p><pre>
