--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,11 +50,12 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.75]</h1>
+    <h1>Karazhan Library[Lv.76]</h1>
 
     <p style="margin-top:45px;"><pre>
 
-    <h2><strong>경제[Lv.33]</h2></strong>
+    <h2><strong>경제[Lv.31]</h2></strong>
+      [주가급등 사유없음]-장지웅</b><br>
       [투자의 태도]-곽상준</b><br>
       <b>7X[제 3의 부의 원칙]-대니얼 크로스비</b><br>
       [부의 대이동]-오건영<br>
@@ -83,11 +84,8 @@
       [빅스텝]-박혜정<br>
       [부의 본능]-브라운스톤<br>
       [앞으로 10년 경제 대위기가 온다]-정동희<br>
-      [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
       [원더키디의 세대, IT는 우리의 일상을 어떻게 바꾸는가?]-이영복<br>
-      [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
       [대한민국 부동산 흐름 읽는법]-신진수<br>
-      [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
     <h2><strong>역사[Lv.8]</h2></strong>
       <b>3x[하룻밤에 읽는 영국사]-안병억</b><br>
       [하룻밤에 읽는 한국사]-최용범<br>
@@ -120,10 +118,13 @@
     <h2><strong>과학[Lv.2]</h2></strong>
       2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
       2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
-    <h2><strong>경영[Lv.3]</h2></strong>
+    <h2><strong>경영[Lv.6]</h2></strong>
       <b>3X[적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단</b><br>
       [채리티:워터]-스캇 해리슨<br>
       [반대의 놀라운 힘]-샬런 네메스<br>
+      [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
+      [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
+      [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
     <h2><strong>소설[Lv.6]</h2></strong>
       [별을 위한 시간]-로버트 A. 하인라인<br>
       [위대한 개츠비]-스콧 피츠제럴드<br>
