--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,14 +50,18 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.76]</h1>
+    <h1>Karazhan Library[Lv.81]</h1>
 
     <p style="margin-top:45px;"><pre>
 
-    <h2><strong>경제[Lv.31]</h2></strong>
-      [주가급등 사유없음]-장지웅</b><br>
-      [투자의 태도]-곽상준</b><br>
-      <b>7X[제 3의 부의 원칙]-대니얼 크로스비</b><br>
+    <h2><strong>경제[Lv.35]</h2></strong>
+      [주식차트 절대비기 300선]-이상우<br>
+      [주식투자 끝장내기]-이상우<br>
+      [이상하게 쉬운주식]-이상우<br>
+      [위대한 경제학자들의 대담한 제안]-린다 유<br>
+      [주가급등 사유없음]-장지웅<br>
+      [투자의 태도]-곽상준<br>
+      <b>8X[제 3의 부의 원칙]-대니얼 크로스비</b><br>
       [부의 대이동]-오건영<br>
       [Trade the Trader]-Quint Tatro<br>
       [위험한 일본 경제의 미래]-데이비드 앳킨슨<br>
@@ -115,9 +119,6 @@
       [호감 가는 대화에는 8가지 절대법칙이 있다]-스쿤<br>
       [마음을 훔치는 대화법]-임철웅<br>
       2x[침묵이라는 무기]-코르넬리아 토프<br>
-    <h2><strong>과학[Lv.2]</h2></strong>
-      2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
-      2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
     <h2><strong>경영[Lv.6]</h2></strong>
       <b>3X[적벽대전, 이길 수 밖에 없는 제갈량의 전략 기획서]-나단</b><br>
       [채리티:워터]-스캇 해리슨<br>
@@ -125,6 +126,17 @@
       [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
       [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
       [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
+    <h2><strong>사회[Lv.3]</h2></strong>
+      [도덕적 인간은 왜 나쁜 사회를 만드는가]-로랑 베그<br>
+      [협력의 역설]-애덤 카헤인<br>
+      [재미란 무엇인가?]-벤 핀첨<br>
+    <h2><strong>과학[Lv.2]</h2></strong>
+      2x[기억은 미래로 향한다]-한나 모니어, 마르틴 게스만<br>
+      2X[창조하는 뇌]-데이비드 이글먼, 앤서니 브란트<br>
+    <h2><strong>자기계발[Lv.3]</h2></strong>
+      [최강 멘탈]-쓰지 유시후미<br>
+      [지친 당신에게 고요를 선물합니다]-팀 콜린스<br>
+      2X[기획자의 습관]-최장순<br>
     <h2><strong>소설[Lv.6]</h2></strong>
       [별을 위한 시간]-로버트 A. 하인라인<br>
       [위대한 개츠비]-스콧 피츠제럴드<br>
@@ -132,15 +144,8 @@
       <b>20X[삼국지]-나관중</b><br>
       [잠]-베르나르 베르베르<br>
       [82년생 김지영]-조남주<br>
-    <h2><strong>자기계발[Lv.3]</h2></strong>
-      [최강 멘탈]-쓰지 유시후미<br>
-      [지친 당신에게 고요를 선물합니다]-팀 콜린스<br>
-      2X[기획자의 습관]-최장순<br>
     <h2><strong>에세이[Lv.1]</h2></strong>
-      [이창호의 부득탐승]-이창호
-    <h2><strong>사회학[Lv.2]</h2></strong>
-      [협력의 역설]-애덤 카헤인<br>
-      [재미란 무엇인가?]-벤 핀첨<br>
+      [이창호의 부득탐승]-이창호<br>
     </p></pre>
 
 
@@ -150,7 +155,12 @@
 
     <p><pre>
       <h2>2020년 9월 독서</h2>
+        <li>경제:[주식차트 절대비기 300선]-이상우</li>
+        <li>경제:[주식투자 끝장내기]-이상우</li>
+        <li>경제:[이상하게 쉬운주식]-이상우</li>
         <li>경제:[주가급등 사유없음]-장지웅</li>
+        <li>경제:[위대한 경제학자들의 대담한 제안]-린다 유</li>
+        <li>사회:[도덕적 인간은 왜 나쁜 사회를 만드는가]-로랑 베그</li>
     </p></pre>
 
     <p><pre>
