--- a/The_economist.html
+++ b/The_economist.html
@@ -57,6 +57,12 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=39Ez1j6LKzA" target="_blank" title="JD부자연구소">
+    소득불평등은 주가의 상승을 부른다</a><br>
+
+  <a href="https://www.youtube.com/watch?v=OqAC7DScIN4" target="_blank" title="증시각도기TV">
+    [9월1일 한국마감] 개인투자자가 이끈 상승</a><br>
+
   <a href="https://www.youtube.com/watch?v=mj-2OQ1Wv3A" target="_blank" title="이상투자그룹">
     [셀트리온 주가] 긴급 속보 현재 여의도 초비상 난 백신 치료제 희귀의약품 지정 13조 시장 점유율 1위 확정 이상우 주식전문가 바이오테마 l 이상우 전문가 l 이상우 대표 l</a><br>
 
