--- a/The_economist.html
+++ b/The_economist.html
@@ -57,6 +57,15 @@
 
 
 
+  <a href="https://www.youtube.com/watch?v=N2ntIGB2cxk" target="_blank" title="자유잍튜브THE">
+    BBIG 7 종말인가? 상승의 주역에서 하락의 원흉이 된 것인가.</a><br>
+
+  <a href="https://www.youtube.com/watch?v=6mvvr1iKLqY" target="_blank" title="자유잍튜브THE">
+    지금은 그때와 다르다. 실체가 있는 것에 투자하라.</a><br>
+
+  <a href="https://www.youtube.com/watch?v=DorLY4VqZCg" target="_blank" title="JD부자연구소">
+    다음주 경기부양책이 통과된다면</a><br>
+
   <a href="https://www.youtube.com/watch?v=39Ez1j6LKzA" target="_blank" title="JD부자연구소">
     소득불평등은 주가의 상승을 부른다</a><br>
 
