--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -65,6 +65,16 @@
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <br>
 
+
+
+
+
+  <a href="https://www.youtube.com/watch?v=-wjNBiOlHBk" taregt="_blank" target="이상투자그룹">
+    [주식강의] 꼭 봐야할 남북경협주 역대급 총정리 1탄! 이것만 보면 끝 l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ORCEIPQZ2sI" taregt="_blank" target="이상투자그룹">
+    [주식] 패닉과 발작 "미친 증시" 짚어 봐야 할 4가지 포인트!! 1탄! l 이상우 수석 전문가 l 이상투자그룹</a><br>
+
   <a href="https://www.youtube.com/watch?v=OGp4TuMOK7c" taregt="_blank" target="Humbled Trader">
     How to Buy Penny Stock Runners? $SES $HEPA $BNGO $WWR Weekly Trade Recap</a><br>
 
