--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -69,6 +69,10 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=w55qQWitIO4" taregt="_blank" target="이상투자그룹">
+    [주식] 2018년 대한민국 하반기를 이끌 주요 종목 베스트5 1탄! l 이상우 애널리스트 l 이상투자그룹</a><br>
+
   <a href="https://www.youtube.com/watch?v=-wjNBiOlHBk" taregt="_blank" target="이상투자그룹">
     [주식강의] 꼭 봐야할 남북경협주 역대급 총정리 1탄! 이것만 보면 끝 l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
 
