--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -60,15 +60,8 @@
 
 
 
-
-  <a>WOT Chart Objectification</a><br>
-  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
-  <br>
-
-
-
-
-
+  <a href="https://www.youtube.com/watch?v=ImMnkezx5Is" taregt="_blank" target="이상투자그룹">
+    [주식대학] 개미가 세력을 이기는 방법 3탄 [캔들 양음양편] l 주식하는법 l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
 
   <a href="https://www.youtube.com/watch?v=w55qQWitIO4" taregt="_blank" target="이상투자그룹">
     [주식] 2018년 대한민국 하반기를 이끌 주요 종목 베스트5 1탄! l 이상우 애널리스트 l 이상투자그룹</a><br>
@@ -78,6 +71,10 @@
 
   <a href="https://www.youtube.com/watch?v=ORCEIPQZ2sI" taregt="_blank" target="이상투자그룹">
     [주식] 패닉과 발작 "미친 증시" 짚어 봐야 할 4가지 포인트!! 1탄! l 이상우 수석 전문가 l 이상투자그룹</a><br>
+
+  <a>WOT Chart Objectification</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <br>
 
   <a href="https://www.youtube.com/watch?v=OGp4TuMOK7c" taregt="_blank" target="Humbled Trader">
     How to Buy Penny Stock Runners? $SES $HEPA $BNGO $WWR Weekly Trade Recap</a><br>
