--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -60,29 +60,48 @@
 
 
 
-  <a href="https://www.youtube.com/watch?v=ImMnkezx5Is" taregt="_blank" target="이상투자그룹">
+
+  <a href="https://www.youtube.com/watch?v=ZyVPPqmLUcY" target="_blank" title="이상투자그룹">
+    [주식투자] 20분만 보세요. 꼭 봐야 할 재테크 주식 스터디 청중강의 2탄. 20년 후 전세계적 재테크 미래는?ㅣ주식강의 주식투자 주식기초 주식차트</a><br>
+
+  <a href="https://www.youtube.com/watch?v=IyvuqORNVa4" target="_blank" title="이상투자그룹">
+    [주식] 꼭 봐야 할 주식 스터디 청중 강의 1탄 고수의 기술, 기술적 분석 VS 기본적 분석 12분만 보세요. 한 번에 이해됩니다.</a><br>
+
+  <a href="https://www.youtube.com/watch?v=yT5yrJZCtlw" target="_blank" title="이상투자그룹">
+    [긴급] 코디엠 5년 갈 상승테마+미국 FDA인증 완료+자회사 상장 임박+흑자전환! l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
+
+  <a href="https://www.youtube.com/watch?v=mqhWbtOZ2gI" target="_blank" title="이상투자그룹">
+    [VIP 주식] 남북경협 끝? 2탄 + 최고 실적 기업 + 알짜배기 제약바이오 두 종목 l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
+
+  <a href="https://www.youtube.com/watch?v=zXlpmA6Y3iM" target="_blank" title="이상투자그룹">
+    [주식]15분만 보면 500% 돈버는 주식고수의 숨겨진 비법은? l 이상우 수석 전문가 l 이상투자그룹</a><br>
+
+  <a href="https://www.youtube.com/watch?v=-7oOMCANoG8" target="_blank" title="이상투자그룹">
+    [VIP주식] 임상 3상에 들어간 제약· 바이오 BEST 3선! 조선일보 대상 전문가의 특급 분석 아이큐어, 코오롱티슈진, 윈팩 이상우 수석 전문가 l 이상투자그룹</a><br>
+
+  <a href="https://www.youtube.com/watch?v=ImMnkezx5Is" target="_blank" title="이상투자그룹">
     [주식대학] 개미가 세력을 이기는 방법 3탄 [캔들 양음양편] l 주식하는법 l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
 
-  <a href="https://www.youtube.com/watch?v=w55qQWitIO4" taregt="_blank" target="이상투자그룹">
+  <a href="https://www.youtube.com/watch?v=w55qQWitIO4" target="_blank" title="이상투자그룹">
     [주식] 2018년 대한민국 하반기를 이끌 주요 종목 베스트5 1탄! l 이상우 애널리스트 l 이상투자그룹</a><br>
 
-  <a href="https://www.youtube.com/watch?v=-wjNBiOlHBk" taregt="_blank" target="이상투자그룹">
+  <a href="https://www.youtube.com/watch?v=-wjNBiOlHBk" target="_blank" title="이상투자그룹">
     [주식강의] 꼭 봐야할 남북경협주 역대급 총정리 1탄! 이것만 보면 끝 l 이상우 수석 애널리스트 l 이상투자그룹</a><br>
 
-  <a href="https://www.youtube.com/watch?v=ORCEIPQZ2sI" taregt="_blank" target="이상투자그룹">
-    [주식] 패닉과 발작 "미친 증시" 짚어 봐야 할 4가지 포인트!! 1탄! l 이상우 수석 전문가 l 이상투자그룹</a><br>
+  <a href="https://www.youtube.com/watch?v=ORCEIPQZ2sI" target="_blank" title="이상투자그룹">
+    [주식] 패닉과 발작 "미친 증시" 짚어 봐야 할 4가지 포인트!! 1탄! l 이상우 수석 전문가 l 이상투자그룹</a><br><br>
 
   <a>WOT Chart Objectification</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
   <br>
 
-  <a href="https://www.youtube.com/watch?v=OGp4TuMOK7c" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=OGp4TuMOK7c" target="_blank" title="Humbled Trader">
     How to Buy Penny Stock Runners? $SES $HEPA $BNGO $WWR Weekly Trade Recap</a><br>
 
-  <a href="https://www.youtube.com/watch?v=k_pySJGSz3c" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=k_pySJGSz3c" target="_blank" title="Humbled Trader">
     How to build a Day Trading Computer Set up? Best Day Trading Station</a><br>
 
-  <a href="https://www.youtube.com/watch?v=i43WeT6u5rE" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=i43WeT6u5rE" target="_blank" title="Humbled Trader">
     Large Cap & Penny Stock Gap Up Short - Day Trading Recap ($SES $OCGN $ROKU $FAST $IRBT)</a><br><br>
 
   <a>WOT Chart Objectification</a><br>
@@ -169,7 +188,7 @@
   <a>WOT Weekly Watchlist Screening & Sorting Procedure(8/2/2020)</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
 
-  <a href="https://www.youtube.com/watch?v=vJ5AgtHNnCY" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=vJ5AgtHNnCY" target="_blank" title="Humbled Trader">
     How to find & buy Penny Stock Runners 2020? Reverse Split Strategy (step by step $VIVE)</a><br>
 
     <a></a>
@@ -196,7 +215,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=4Jyj3xUSIrs" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=4Jyj3xUSIrs" target="_blank" title="Humbled Trader">
     Day Trading Strategies NOW - Sector Sympathy, Institutional Ownership & More! $SPI $YUMA $FRAN $SINT</a><br>
 
     <a></a>
@@ -209,7 +228,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=rq4jthS3nTA" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=rq4jthS3nTA" target="_blank" title="Humbled Trader">
     How to draw Support and Resistance Lines - Indicators, Earnings Gap (Day Trading Beginners $ROKU)</a><br>
 
     <a></a>
@@ -221,7 +240,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=3gDzKWhBkss" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=3gDzKWhBkss" target="_blank" title="Humbled Trader">
     MUST READ Trading Books, Trader Psychology & Discipline - Day Trading for Beginners 2020</a><br>
 
     <a></a>
@@ -235,7 +254,7 @@
     </p><br>
 
 
-  <a href="http://comhttps//www.youtube/watch?v=2LAEfvae_cI" taregt="_blank" target="Humbled Trader">
+  <a href="http://comhttps//www.youtube/watch?v=2LAEfvae_cI" target="_blank" title="Humbled Trader">
     How to Buy the Dip day trading? Small Account Long strategy $ELTK $LCI $AKTX</a><br>
 
     <a></a>
@@ -250,7 +269,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=TcsKfw4VLFQ" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=TcsKfw4VLFQ" target="_blank" title="Humbled Trader">
     How to let WINNERS run in Day Trading? Gap trading, Price targets $FFHL $FL $DPW $RKDA</a><br>
 
     <a></a>
@@ -262,7 +281,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=AOq6Msn86eI" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=AOq6Msn86eI" target="_blank" title="Humbled Trader">
     How to Day Trade Penny Stock Runners? $RKDA $PSTV</a><br>
 
     <a></a>
@@ -283,7 +302,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=JStmUa_4xzQ" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=JStmUa_4xzQ" target="_blank" title="Humbled Trader">
     How to Short Penny Stocks SAFELY? Penny stock short strategy for beginners $CEI $ELTK</a><br>
 
     <a></a>
@@ -298,7 +317,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=b3qGKhHMCIM" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=b3qGKhHMCIM" target="_blank" title="Humbled Trader">
     Penny Stock Market Cycles Explained - penny stock trading for beginners 2020</a><br>
 
     <a></a>
@@ -324,7 +343,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=F1Shbgwh7mo" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=F1Shbgwh7mo" target="_blank" title="Humbled Trader">
     Webull App Tutorial 2020 ( FULL WALKTHROUGH + Webull review )</a><br>
 
     <a></a>
@@ -338,7 +357,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=QGETa3uzN3I" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=QGETa3uzN3I" target="_blank" title="Humbled Trader">
     How to read SEC Filings - Penny stock offerings $NERV</a><br>
 
     <a></a>
@@ -354,7 +373,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=qBor9bsfW0E" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=qBor9bsfW0E" target="_blank" title="Humbled Trader">
     5 KEY Lessons to Day Trading Penny Stocks ( Low float stocks $SOLY $ELTK $GNCA $DMPI )</a><br>
 
     <a></a>
@@ -390,7 +409,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=heETqGrDRuQ" taregt="_blank" target="Humbled Trader"><b>
+  <a href="https://www.youtube.com/watch?v=heETqGrDRuQ" target="_blank" title="Humbled Trader"><b>
     Intro to Penny Stock Trading Psychology - Day trading for beginners ($ABIO Stock)</b></a><br>
 
     <a></a>
@@ -414,10 +433,10 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=Nlilyy6TDMQ" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=Nlilyy6TDMQ" target="_blank" title="Humbled Trader">
     Intro to Penny Stocks (The TRUTH behind Penny Stock Investing)</a><br>
 
-  <a href="https://www.youtube.com/watch?v=mIrjwD1krmo" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=mIrjwD1krmo" target="_blank" title="Humbled Trader">
     How to Swing Trade Tech IPO Stocks $LYFT $PINS $ZM $JMIA $TIGR</a><br>
 
     <a></a>
@@ -429,7 +448,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=ygMLg_zK_NU" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=ygMLg_zK_NU" target="_blank" title="Humbled Trader">
     How to Day Trade and Buy Penny Stock Gappers and Gaps - Beginner Day Trading Strategy</a><br>
 
     <a></a>
@@ -457,7 +476,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=cgf0FjzdsKg" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=cgf0FjzdsKg" target="_blank" title="Humbled Trader">
     How to Day Trade Gappers and Stock Gap Ups - Day Trading Psychology for Beginners</a><br>
 
     <a></a>
@@ -475,7 +494,7 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=d55SAYjBHd0" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=d55SAYjBHd0" target="_blank" title="Humbled Trader">
     How to Read SEC Filings When Buying Penny Stocks | $ZYNE $YRIV</a><br>
 
     <a></a>
@@ -503,10 +522,10 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=LFRqoqDibD0" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=LFRqoqDibD0" target="_blank" title="Humbled Trader">
     Beware of Penny Stock Offerings when Day Trading- $AVEO $OPTT SEC Filings for Beginners</a><br>
 
-  <a href="https://www.youtube.com/watch?v=7e0AgpjYwjg" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=7e0AgpjYwjg" target="_blank" title="Humbled Trader">
     How to Buy Penny Stocks Overnight? Beginner Day Trading Strategy</a><br>
 
     <a></a>
@@ -522,49 +541,49 @@
     </p><br>
 
 
-  <a href="https://www.youtube.com/watch?v=lMn9vL47T-c" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=lMn9vL47T-c" target="_blank" title="Humbled Trader">
     How to Transfer a Brokerage Account to Questrade Canada 🇨🇦</a><br>
 
-  <a href="https://www.youtube.com/watch?v=dM1OnTqpgUY" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=dM1OnTqpgUY" target="_blank" title="Humbled Trader">
     How To Open A Questrade Account 2020 | Stock Market Trading & Investing</a><br>
 
-  <a href="https://www.youtube.com/watch?v=Lv1zWA0fbg4" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=Lv1zWA0fbg4" target="_blank" title="Humbled Trader">
     Buying Aurora Stock with Wealthsimple TRADE (STEP BY STEP Walkthrough & Review)</a><br>
 
-  <a href="https://www.youtube.com/watch?v=hAUgjcJS6Qg" taregt="_blank" target="Humbled Trader">
+  <a href="https://www.youtube.com/watch?v=hAUgjcJS6Qg" target="_blank" title="Humbled Trader">
     Wealthsimple TRADE Review & App Demo | FREE Stock Trading in Canada</a><br>
 
-  <a href="https://www.youtube.com/watch?v=Az9GebXQJVs" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=Az9GebXQJVs" target="_blank" title="시간여행TV">
     시간여행TV의 주식투자전략 5강 - 주식시장 사건사고 (1)</a><br>
 
-  <a href="https://www.youtube.com/watch?v=Y3FoyyRffUc" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=Y3FoyyRffUc" target="_blank" title="시간여행TV">
     시간여행TV의 주식투자전략 4강 - 소형주 매매법(4)</a><br>
 
-  <a href="https://www.youtube.com/watch?v=5KfH4hlqQuM" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=5KfH4hlqQuM" target="_blank" title="시간여행TV">
     시간여행TV의 주식투자전략 3강 - 소형주 매매법(3)</a><br>
 
-  <a href="https://www.youtube.com/watch?v=Rcko6-qe32M" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=Rcko6-qe32M" target="_blank" title="시간여행TV">
     시간여행TV의 주식투자전략 2강 - 소형주매매법(2)</a><br>
 
-  <a href="https://www.youtube.com/watch?v=n288ttmDhnA" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=n288ttmDhnA" target="_blank" title="시간여행TV">
     시간여행TV의 주식투자전략 1강 - 소형주 매매법(1)</a><br>
 
   <a href="https://www.youtube.com/watch?v=tpwQFw7Fpjk" target="_blank" title="돈파는가게_세상의 모든 재테크">
     개인과 기관투자자의 생각과 행동은 어떻게 다를까?_조성연소장(펀펀한 투자연구소)</a><br>
 
-  <a href="https://www.youtube.com/watch?v=PTjLEwXiFNY" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=PTjLEwXiFNY" target="_blank" title="시간여행TV">
     공지사항 & 주식계좌 수익 인증합니다</a><br>
 
-  <a href="https://www.youtube.com/watch?v=P0jFLDS8Ptk&t=2s" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=P0jFLDS8Ptk&t=2s" target="_blank" title="시간여행TV">
     99%의 개미투자자들은 모르는 꿀팁을 알려드립니다</a><br>
 
-  <a href="https://www.youtube.com/watch?v=Utq8UtEHtl8" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=Utq8UtEHtl8" target="_blank" title="시간여행TV">
     주식으로 117억 수익 인증 + 주식 유튜버 최초 5% 지분 공시 후기</a><br>
 
-  <a href="https://www.youtube.com/watch?v=mdnvKrJ67Os" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=mdnvKrJ67Os" target="_blank" title="시간여행TV">
     에스모라는 회사에 투자를 하고 싶지 않은 이유</a><br>
 
-  <a href="https://www.youtube.com/watch?v=miYzOAMx0O4" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=miYzOAMx0O4" target="_blank" title="시간여행TV">
     무자본 M&A, 주가조작에 대해서 알려드립니다</a><br>
 
   <a href="https://www.youtube.com/watch?v=d8X1LNJjIqM" target="_blank" title="뉴욕 네사NESSA NOH">
@@ -724,19 +743,19 @@
     New drawing functionality: introduction</a><br>
 
 
-  <a href="https://www.youtube.com/watch?v=LsPmYE76xjA" taregt="_blank" target="EngineerTV">
+  <a href="https://www.youtube.com/watch?v=LsPmYE76xjA" target="_blank" title="EngineerTV">
     Battery Industry Investment Guide</a><br>
 
-  <a href="https://www.youtube.com/watch?v=vFUAJAffPiI" taregt="_blank" target="더나은삶TV">
+  <a href="https://www.youtube.com/watch?v=vFUAJAffPiI" target="_blank" title="더나은삶TV">
     재무제표의 행간을 읽고 주식투자를 위한 기업분석 하는법</a><br>
 
-  <a href="https://www.youtube.com/watch?v=cCDA55MMu7s" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=cCDA55MMu7s" target="_blank" title="시간여행TV">
     [주택시장 안정화 방안] 12월 16일 부동산 대책 보고 가세요</a><br>
 
-  <a href="https://www.youtube.com/watch?v=yaJ0szRP_QQ" taregt="_blank" target="Bullish Bears">
+  <a href="https://www.youtube.com/watch?v=yaJ0szRP_QQ" target="_blank" title="Bullish Bears">
     Bullish vs Bearish and How to Trade in Either Market</a><br>
 
-  <a href="https://www.youtube.com/watch?v=MJEZOfiCw24" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=MJEZOfiCw24" target="_blank" title="시간여행TV">
     우량주/대형주 매매할때 꼭 알아야만 하는 내용들</a><br>
 
     <p>
@@ -745,10 +764,10 @@
       자기의 기존 평단가보다 아래에서 계속 사는게 장기투자에요.
     </p>
 
-  <a href="https://www.youtube.com/watch?v=aPF9E6iGgSc" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=aPF9E6iGgSc" target="_blank" title="시간여행TV">
     99% 개미투자자들은 모르는 HTS의 숨은 꿀 기능</a><br>
 
-  <a href="https://www.youtube.com/watch?v=tZpdXOAcrxs&t=12s" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=tZpdXOAcrxs&t=12s" target="_blank" title="시간여행TV">
     주식 작전세력에 대해서 모든걸 알려드립니다.</a><br>
 
     <p>
@@ -790,14 +809,14 @@
     </p>
 
 
-  <a href="https://www.youtube.com/watch?v=28yPis20CaY" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=28yPis20CaY" target="_blank" title="시간여행TV">
     100억 개미가 알려주는 증권사 리포트 활용법</a><br>
 
     <p>
       DB금융투자, 하나금융을 추천.
     </p>
 
-  <a href="https://www.youtube.com/watch?v=2Nq1qzkaSn0" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=2Nq1qzkaSn0" target="_blank" title="시간여행TV">
     주식으로 2년동안 100억 수익, 그 중 손절은 몇 종목??</a><br>
 
     <p>
@@ -839,13 +858,13 @@
       하락장에서 기계적으로 매수를 하는게 비결이에요.
     </p>
 
-  <a href="https://www.youtube.com/watch?v=YhYMUQfbVx8" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=YhYMUQfbVx8" target="_blank" title="시간여행TV">
     팍스넷 하한가, 충분히 예고되었던 참사</a><br>
 
-  <a href="https://www.youtube.com/watch?v=BV72ozbImhc" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=BV72ozbImhc" target="_blank" title="시간여행TV">
     이낙연 테마주 폭락 분석 SDN,남화산업,남화토건,이월드,장원테크,금호전기,우원개발,남선알미늄</a><br>
 
-  <a href="https://www.youtube.com/channel/UCcKZp7rqL8oOXv4O57L3xSg/videos" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/channel/UCcKZp7rqL8oOXv4O57L3xSg/videos" target="_blank" title="시간여행TV">
     100억 전업투자자가 알려주는 주식 이야기</a><br>
 
     <p>
@@ -891,10 +910,10 @@
       기대감으로 오르는 종목은 재료가 소멸하거나 안좋은 이슈로 마무리가 되었다면 지체없이 누구보다 빠르게 매도하고 나가야돼요.
     </p>
 
-  <a href="https://www.youtube.com/watch?v=-73_Y4hT2Zw" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=-73_Y4hT2Zw" target="_blank" title="시간여행TV">
     구독자 2만명 달성 기념 이벤트!!!</a><br>
 
-  <a href="https://www.youtube.com/watch?v=bM3QywmKRBc" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=bM3QywmKRBc" target="_blank" title="시간여행TV">
     주식투자로 30억을 버는 가장 빠른 방법 -소형주 매매 2편</a>
 
     <p>
@@ -919,7 +938,7 @@
       반면에 매수랑 매도 창구가 똑같은 경우는 해먹고 나간거에요.
     </p>
 
-  <a href="https://www.youtube.com/watch?v=5SNoyrdNtJM" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=5SNoyrdNtJM" target="_blank" title="시간여행TV">
     주식으로 30억을 버는 가장 빠른 방법 -소형주 매매 1편</a>
 
     <p>
@@ -956,7 +975,7 @@
       근데 시가총액이 낮은데 거래량이 몇십억씩 매일 터지는 경우는 세력이 매집을 하고 있다고 보시면 되요.
     </p>
 
-  <a href="https://www.youtube.com/watch?v=_mUIhmyh_OI" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=_mUIhmyh_OI" target="_blank" title="시간여행TV">
     헝셩그룹 1억 수익실현 투자아이디어</a>
 
     <p>
@@ -968,7 +987,7 @@
     </p>
 
 
-  <a href="https://www.youtube.com/watch?v=WjRKN3tb_n4" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=WjRKN3tb_n4" target="_blank" title="시간여행TV">
     정치테마주에도 우선순위가 있다?</a>
 
     <p>
@@ -1001,7 +1020,7 @@
       왜냐면 이미 안올라서 잘 안움직이기 때문이에요.
     </p>
 
-  <a href="https://www.youtube.com/watch?v=xHnBcyNTP48" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=xHnBcyNTP48" target="_blank" title="시간여행TV">
     주식회사의 경영권 분쟁에 대해서 알려드립니다</a>
 
     <p>
@@ -1014,7 +1033,7 @@
       적자가 수백억 이상 되는 회사는 분식회계를 했을 가능성도 있기 때문에 함부로 M&A를 못해요.
     </p>
 
-  <a href="https://www.youtube.com/watch?v=13Bve9a_X2Q" taregt="_blank" target="시간여행TV">
+  <a href="https://www.youtube.com/watch?v=13Bve9a_X2Q" target="_blank" title="시간여행TV">
     우리기술투자 1억원 수익실현, 투자아이디어</a>
 
     <p>
