--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,11 +50,12 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.81]</h1>
+    <h1>Karazhan Library[Lv.82]</h1>
 
     <p style="margin-top:45px;"><pre>
 
-    <h2><strong>경제[Lv.35]</h2></strong>
+    <h2><strong>경제[Lv.36]</h2></strong>
+      [시간여행TV의 주식투자 전략]-시간여행TV
       [주식차트 절대비기 300선]-이상우<br>
       [주식투자 끝장내기]-이상우<br>
       [이상하게 쉬운주식]-이상우<br>
@@ -65,7 +66,7 @@
       [부의 대이동]-오건영<br>
       [Trade the Trader]-Quint Tatro<br>
       [위험한 일본 경제의 미래]-데이비드 앳킨슨<br>
-      [주식투자의 법칙]-제시 리버모어<br>
+      <b>3x[주식투자의 법칙]-제시 리버모어</b><br>
       [부자들의 습관 버티는 기술]-김광주<br>
       [해외 ETF 백과사전]-김태현<br>
       [돈의 속성]-김승호<br>
@@ -152,6 +153,11 @@
 
 
 
+
+    <p><pre>
+      <h2>2020년 10월 독서</h2>
+        <li>경제:[시간여행TV의 주식투자 전략]-시간여행TV</li>
+    </p></pre>
 
     <p><pre>
       <h2>2020년 9월 독서</h2>
