--- a/以虞待不虞者勝.html
+++ b/以虞待不虞者勝.html
@@ -51,7 +51,7 @@
     <img src="진설화난영참.jpg" width="100%">
 
 
-  <h1>以虞待不虞者勝[Lv.4]</h1>
+  <h1>以虞待不虞者勝[Lv.5]</h1>
   <h3 style="text-align:center">준비하고 있으면서 준비하지 못한 적을 기다리는 자는 승리한다.</h3><br>
 
   <br><br><br>
@@ -68,8 +68,8 @@
     (적병이) 모자란다는 것은 적이 (아군을) 수비하기 때문이다.<br>
     (아군이) 많다는 것은 적들로 하여금 아군을 수비하도록 하기 때문이다.<br>
     따라서 전쟁할 곳을 알고, 전쟁할 날짜를 알면 천 리를 행군해서도 전쟁을 할 수 있지만,<br>
-    전쟁할 곳을 ㅇ라지 못하고 전쟁할 날짜를 알지 못하면 좌측이 우측을 구할 수 없고, 우측이 좌측을 수할  수 없다.<br>
-    전방이 후방을 구할 수 ㅇ벗고 후방이 전방을 구할 수 없는데,<br>
+    전쟁할 곳을 알지 못하고 전쟁할 날짜를 알지 못하면 좌측이 우측을 구할 수 없고, 우측이 좌측을 수할  수 없다.<br>
+    전방이 후방을 구할 수 없고 후방이 전방을 구할 수 없는데,<br>
     하물며 먼 곳을 수십 리, 가까운 곳도 몇 리나 떨어져 있는 경우는 말해 무엇하겠는가.<br>
     내가 헤어려보건대, 월나라의 병력이 비록 많다고는 하지만 또한 어찌 이기고 지는 것에 보탬이 되겠는가?<br>
     그러므로 승리란 만들어지는 것이니, 적이 비록 많을지라도 그들로 하여금 전투를 할 수 없게 만들면 되는 것이다.
