--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -55,7 +55,7 @@
     <p style="margin-top:45px;"><pre>
 
     <h2><strong>경제[Lv.36]</h2></strong>
-      [시간여행TV의 주식투자 전략]-시간여행TV
+      [시간여행TV의 주식투자 전략]-시간여행TV<br>
       [주식차트 절대비기 300선]-이상우<br>
       [주식투자 끝장내기]-이상우<br>
       [이상하게 쉬운주식]-이상우<br>
