--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -52,13 +52,24 @@
 
 
 
-  <h1>The War of Taiji[Lv.28]</h1><br><br><br>
+  <h1>The War of Taiji[Lv.32]</h1><br><br><br>
 
 
 
+  <a>10/9/2020 한국증시 상한가 분석</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <br>
 
+  <a>10/8/2020 미국증시 TOP GAINERS 분석</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <br>
 
+  <a>10/8/2020 한국증시 상한가 분석</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+  <br>
 
+  <a href="https://www.youtube.com/watch?v=iXnNMizmbIc" target="_blank" title="미국주식에 미치다 TV">
+    XBox 첫 출시이후 20년간 1700% 상승한 온라인 게임섹터, 지금도 늦지 않았다</a><br>
 
   <a href="https://www.youtube.com/watch?v=ZyVPPqmLUcY" target="_blank" title="이상투자그룹">
     [주식투자] 20분만 보세요. 꼭 봐야 할 재테크 주식 스터디 청중강의 2탄. 20년 후 전세계적 재테크 미래는?ㅣ주식강의 주식투자 주식기초 주식차트</a><br>
