--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,11 +50,12 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.82]</h1>
+    <h1>Karazhan Library[Lv.84]</h1>
 
     <p style="margin-top:45px;"><pre>
 
-    <h2><strong>경제[Lv.36]</h2></strong>
+    <h2><strong>경제[Lv.37]</h2></strong>
+      [언컨택트]-김용섭<br>
       [시간여행TV의 주식투자 전략]-시간여행TV<br>
       [주식차트 절대비기 300선]-이상우<br>
       [주식투자 끝장내기]-이상우<br>
@@ -145,7 +146,8 @@
       <b>20X[삼국지]-나관중</b><br>
       [잠]-베르나르 베르베르<br>
       [82년생 김지영]-조남주<br>
-    <h2><strong>에세이[Lv.1]</h2></strong>
+    <h2><strong>에세이[Lv.2]</h2></strong>
+      [무례한 사람에게 웃으며 대처하는 법]-정문정
       [이창호의 부득탐승]-이창호<br>
     </p></pre>
 
@@ -156,7 +158,9 @@
 
     <p><pre>
       <h2>2020년 10월 독서</h2>
+        <li>경제:[언컨택트]-김용섭</li>
         <li>경제:[시간여행TV의 주식투자 전략]-시간여행TV</li>
+        <li>에세이:[무례한 사람에게 웃으며 대처하는 법]-정문정</li>
     </p></pre>
 
     <p><pre>
