--- a/The_economist.html
+++ b/The_economist.html
@@ -51,11 +51,26 @@
   <img src="blizzardstorm.gif" width="100%">
 
 
-  <h1>The Economist[Lv.28]</h1><br><br><br>
+  <h1>The Economist[Lv.29]</h1><br><br><br>
 
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=owzqWm4OFoY" target="_blank" title="자유잍튜브THE">
+    미래에 투자하라? ESG 팍팍 쳐가면서 투자하면 돼? ESG 투자의 진실을 알아보자.</a><br>
+
+  <a href="https://www.youtube.com/watch?v=yBAZLtKC_b8" target="_blank" title="JD부자연구소">
+    개인이 기업을 이기는 시대</a><br>
+
+  <a href="https://www.youtube.com/watch?v=aW5MQdl3yQg" target="_blank" title="자유잍튜브THE">
+    엔비디아 vs 인텔 : 상승률 25배 차이. 이유가 무엇인가?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=DW1Oeah46GE" target="_blank" title="자유잍튜브THE">
+    파티장에선 파티를 즐겨야한다. 지금 파티는 시작도 안했다.</a><br>
+
+  <a href="https://www.youtube.com/watch?v=14TZ7MBoEyg" target="_blank" title="돈파는가게_세상의 모든 재테크">
+    트럼프 확진! 주식시장 뒤집어졌다!</a><br>
 
   <a href="https://www.youtube.com/watch?v=N2ntIGB2cxk" target="_blank" title="자유잍튜브THE">
     BBIG 7 종말인가? 상승의 주역에서 하락의 원흉이 된 것인가.</a><br>
