--- a/Game_industry_trends.html
+++ b/Game_industry_trends.html
@@ -55,7 +55,8 @@
 
 
 
-
+  <a>10/12/2020 국내뉴스 훑어보기</a><br>
+  <a></a><a></a><a></a><a></a>
 
   <a href="https://www.youtube.com/watch?v=2cKnLFm9ggY" target="_blank" title="그롬마쉬TV">
     [사전 공개] 남만 DLC 가이드 1화 - 남만의 야수와 등갑병을 소개합니다. I 토탈워 삼국 : 흉폭한 야생</a><br>
