--- a/Karazhan_library.html
+++ b/Karazhan_library.html
@@ -50,11 +50,14 @@
   <div id="contents">
     <img src="together.jpg" width="100%">
 
-    <h1>Karazhan Library[Lv.84]</h1>
+    <h1>Karazhan Library[Lv.86]</h1>
 
     <p style="margin-top:45px;"><pre>
 
-    <h2><strong>경제[Lv.37]</h2></strong>
+
+
+    <h2><strong>경제[Lv.38]</h2></strong>
+      [코로나 투자 전쟁]-정채진·박석중·이광수·김한진·김일구·여의도클라스·윤지호·최준영<br>
       [언컨택트]-김용섭<br>
       [시간여행TV의 주식투자 전략]-시간여행TV<br>
       [주식차트 절대비기 300선]-이상우<br>
@@ -128,7 +131,8 @@
       [크러시잇! 열정을 돈으로 바꿔라]-게리 바이너척<br>
       [크러싱 잇! SNS로 부자가 된 사람들]-게리 바이너척<br>
       [이것은 사업을 위한 최소한의 지식이다]-야마다 신야<br>
-    <h2><strong>사회[Lv.3]</h2></strong>
+    <h2><strong>사회[Lv.4]</h2></strong>
+      [세계미래보고서 2035-2055]-박영숙·제롬 글렌<br>
       [도덕적 인간은 왜 나쁜 사회를 만드는가]-로랑 베그<br>
       [협력의 역설]-애덤 카헤인<br>
       [재미란 무엇인가?]-벤 핀첨<br>
@@ -158,6 +162,8 @@
 
     <p><pre>
       <h2>2020년 10월 독서</h2>
+        <li>사회:[세계미래보고서 2035-2055]-박영숙·제롬 글렌</li>
+        <li>경제:[코로나 투자 전쟁]-정채진·박석중·이광수·김한진·김일구·여의도클라스·윤지호·최준영</li>
         <li>경제:[언컨택트]-김용섭</li>
         <li>경제:[시간여행TV의 주식투자 전략]-시간여행TV</li>
         <li>에세이:[무례한 사람에게 웃으며 대처하는 법]-정문정</li>
