--- a/The_economist.html
+++ b/The_economist.html
@@ -57,6 +57,22 @@
 
 
 
+
+  <a href="https://www.youtube.com/watch?v=bLTzGerT8Ko" target="_blank" title="자유잍튜브THE">
+    지금껏 잘못 골랐다면, 이제부터 잘 고르면 된다.</a><br>
+
+  <a href="https://www.youtube.com/watch?v=poVPSbU0yXY" target="_blank" title="증시각도기TV">
+    [10월10일 미국마감] 원화,위안화 급등세!</a><br>
+
+  <a href="https://www.youtube.com/watch?v=LGdWvFzbqaE" target="_blank" title="JD부자연구소">
+    부양책이 왜 통과가 안 되나</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Xf9x95XCLlk" target="_blank" title="자유잍튜브THE">
+    월스트리트의 전망. 바이든 당선되면 증시는 어떻게될까?</a><br>
+
+  <a href="https://www.youtube.com/watch?v=xwehQATJKR4" target="_blank" title="자유잍튜브THE">
+    한국판 뉴딜 시동 걸었나? BBIG K뉴딜 종목, 뭐에 투자하면 좋을까?</a><br>
+
   <a href="https://www.youtube.com/watch?v=owzqWm4OFoY" target="_blank" title="자유잍튜브THE">
     미래에 투자하라? ESG 팍팍 쳐가면서 투자하면 돼? ESG 투자의 진실을 알아보자.</a><br>
 
