--- a/The_war_of_taiji.html
+++ b/The_war_of_taiji.html
@@ -52,21 +52,32 @@
 
 
 
-  <h1>The War of Taiji[Lv.32]</h1><br><br><br>
+  <h1>The War of Taiji[Lv.34]</h1><br><br><br>
 
 
 
-  <a>10/9/2020 한국증시 상한가 분석</a><br>
+
+
+  <a>10/9/2020 미국증시 TOP GAINERS 분석</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
-  <br>
+
+  <a href="https://www.youtube.com/watch?v=1zvT0o4AY7Y" target="_blank" title="시간여행TV">
+    시간여행TV와 함께 떠나는 심해탐험</a><br>
+
+  <a href="https://www.youtube.com/watch?v=Fi01z0DX-W4" target="_blank" title="시간여행TV">
+    시가총액 700억 미만 소형주 매매법을 사용하기가 어려운 이유</a><br>
 
   <a>10/8/2020 미국증시 TOP GAINERS 분석</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
-  <br>
 
   <a>10/8/2020 한국증시 상한가 분석</a><br>
   <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
-  <br>
+
+  <a>10/7/2020 미국증시 TOP GAINERS 분석</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
+
+  <a>10/7/2020 한국증시 상한가 분석</a><br>
+  <a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a><a></a>
 
   <a href="https://www.youtube.com/watch?v=iXnNMizmbIc" target="_blank" title="미국주식에 미치다 TV">
     XBox 첫 출시이후 20년간 1700% 상승한 온라인 게임섹터, 지금도 늦지 않았다</a><br>
